- reworked the file structure for grunt and versioned development. - created an example directory with some test files fro OPA development, gametrailers and nick - disabled some unit tests that are failing because of CODA bugs - tied the "coda.ad.load" custom event to the iframe load event
git-svn-id: https://subversion.1515.mtvi.com/phpsites/platform/btg.mtvnservices.com/trunk/mtvn/dev/jquery-coda@416005 bdf33566-2d3b-0410-a816-9e75a007db76

--- a/test/qunit.html
+++ b/test/qunit.html
@@ -49,7 +49,13 @@
 			data-replacekv="kv=replaced"
 		></div>		
 
-
+	<!--  ad visibility -->
+		<div id="test_display_none" data-sz="300x250" style="display: none"></div>
+		<div id="test_visibility_hidden" data-sz="300x250" style="visibilty: hidden"></div>
+		<div style="display: none">
+			<div id="test_parent_display_none" data-sz="300x250" ></div>
+		</div>
+	
 	</div>
 	<script src="http://btg.mtvnservices.com/aria/coda.html?site=nick.com"></script>
 	<script>
@@ -65,7 +71,7 @@
 	</script>
 
 	<script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
-	<script type="text/javascript" src="/mtvn/jquery-coda/0.1/coda.js"></script>
+	<script type="text/javascript" src="../src/coda.js"></script>
 
 	<script type="text/javascript" src="tests.js"></script>
 
