changed reference to localhost
git-svn-id: https://subversion.1515.mtvi.com/phpsites/platform/btg.mtvnservices.com/trunk/mtvn/dev/jquery-coda@416028 bdf33566-2d3b-0410-a816-9e75a007db76

--- a/examples/gametrailers.html
+++ b/examples/gametrailers.html
@@ -121,7 +121,7 @@
 	if (location.hash.indexOf("opa") > 0) {
 
 			$(".opa")
-				.data("testUrl", "http://localhost/btg/mtvn/dev/jquery-coda/examples/dartframe.html");
+				.data("testUrl", "http://www.greggraf.com/scratch/dartframe.html");
 		
 		$("#cmd_refresh").click(function(e) {
 
