updating plugin to handle possible DART For Publishers data attributes
git-svn-id: https://subversion.1515.mtvi.com/phpsites/platform/btg.mtvnservices.com/trunk/mtvn/dev/jquery-coda@434742 bdf33566-2d3b-0410-a816-9e75a007db76

--- a/test/qunit.html
+++ b/test/qunit.html
@@ -18,7 +18,7 @@
 	<div id="qunit-fixtures">
 	
 	
-	<!-- basic ad placement rates -->
+	<!-- basic ad placement -->
 		<div id="test1" data-sz="300x250"></div>
 		
 	<!-- refresh rates -->
@@ -28,7 +28,7 @@
 		<div class="refresh3"  data-sz="728x90" data-refreshrate="3"></div>
 		<div id="test_zone" data-sz="300x250" data-zone="btf_j_s/nickmom/more_lols/_mn"></div>
 
-	<!-- basic ad placement rates -->
+	<!-- basic ad placement -->
 		<div 
 			id="test_addkv" 
 			data-sz="300x250" 
@@ -55,6 +55,12 @@
 		<div style="display: none">
 			<div id="test_parent_display_none" data-sz="300x250" ></div>
 		</div>
+
+	<!-- DFP data attributes -->
+		<div id="test_dfp" 
+			data-ad-sizes="300x250" 
+			data-ad-unit="/nickmom/more_lols/_mn"
+			data-ad-keyvalues="key1=val1;key2=val2"></div>
 	
 	</div>
 	<script src="http://btg.mtvnservices.com/aria/coda.html?site=nick.com"></script>
