updated grunt file and package.json to be more dynamic updated documentation updated test file to respond to testing=min and pull in minified version for testing changed the custom event signature to use colons instead of dot separators
git-svn-id: https://subversion.1515.mtvi.com/phpsites/platform/btg.mtvnservices.com/trunk/mtvn/dev/jquery-coda@434846 bdf33566-2d3b-0410-a816-9e75a007db76

--- a/test/qunit.html
+++ b/test/qunit.html
@@ -77,8 +77,15 @@
 	</script>
 
 	<script type="text/javascript" src="http://code.jquery.com/qunit/qunit-git.js"></script>
-	<script type="text/javascript" src="../src/coda.js"></script>
 
+	<script>
+		var v = window.location.search.substr(1).split("&")[0].split("testing=")[1];
+		if (v == 'min') {
+			document.write('<script src="../dist/coda.min.js"><' + '/script>')
+		} else {
+			document.write('<script src="../src/coda.js"><' + '/script>')
+		}
+	</script>
 	<script type="text/javascript" src="tests.js"></script>
 
 </body>
