--- a/examples/demo.html
+++ b/examples/demo.html
@@ -17,6 +17,10 @@
 			border: 1px blue solid;
 			
 		}
+		
+		.desktop {
+			display: none;
+		}
 	
 
 
@@ -29,6 +33,10 @@
 			.mobile {
 				display: none;
 
+			}
+
+			.desktop {
+				display: block;
 			}
 
 		}
@@ -53,7 +61,7 @@
     	<div class="mtvn-ad mobile" data-sz="300x50" style="height:50px; width:300px">
 		</div>	
 			
-    	<div class="mtvn-ad" data-sz="728x90">
+    	<div class="mtvn-ad desktop" data-sz="728x90">
  
 			 <noscript>
 				<a href="http://ad.doubleclick.net/jump/mtv.mtvi/atf_j_s/search/index;sec0=search;sec1=index;pos=atf;tag=adj;mtype=standard;sz=728x90;tile=1;demo=D;dcopt=ist;u=pos-atf|tag-adj|mtype-standard|sz-728x90|tile-1|demo-D|dcopt-ist;ord=800169714360071400?" target="_blank" ><img src="http://ad.doubleclick.net/ad/mtv.mtvi/atf_j_s/search/index;sec0=search;sec1=index;pos=atf;tag=adj;mtype=standard;sz=728x90;tile=1;demo=D;dcopt=ist;u=pos-atf|tag-adj|mtype-standard|sz-728x90|tile-1|demo-D|dcopt-ist;ord=800169714360071400?" border="0" alt="" /></a>
@@ -83,19 +91,8 @@
     
     </div>
     <div id="main">how do you hide an ad that is added to the DOM by a framebuster? this may totally make my attempt to show/hide not feasible.</div>
-    
-        	<div class="mtvn-ad" data-sz="5x5" data-addkv="promobox=globaltxtad;" style="height:300px; width:300px">
-
-	</div>
-
-        	<div class="mtvn-ad" data-sz="1x2" data-addkv="research=survey;" style="display:none;">
-
-	</div>
 
 
-
-
-    <footer>copyright</footer>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script src="/mtvn/jquery-coda/0.1/coda.js"></script>
 	<script src="http://btg.mtvnservices.com/aria/coda.html?site=nick.com"></script>
