--- a/examples/demo_async.html
+++ b/examples/demo_async.html
@@ -73,7 +73,7 @@
 	
 	<nav>
 		<ul>
-			<li><a href="">Home</a></li>
+			<li><a href="" id="loadCoda">CODA</a></li>
 			<li><a href="">Away</a></li>
 		</ul>
 	</nav>
@@ -95,15 +95,21 @@
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script src="/mtvn/jquery-coda/0.1/coda.js"></script>
-	<script src="http://btg.mtvnservices.com/aria/coda.html?site=gametrailers.com"></script>
+	
 	<script>
-
-		btg.config.DoubleClick.positionThreshold = "2";
-		btg.config.DoubleClick.autoDcopt = true; 
-
-		$(".mtvn-ad").coda();
+		$("#loadCoda").bind("click", function(e) {
+			e.preventDefault();
+			$.getScript("http://btg.mtvnservices.com/aria/coda.html?site=gametrailers.com", function() {
+	
+				btg.config.DoubleClick.positionThreshold = "2";
+				btg.config.DoubleClick.autoDcopt = true; 
+		
+				$(".mtvn-ad").coda();
+	
+			
+			});
+		});
 	</script>
-
 
   </body>
 </html>
